// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Course Node should match shallow snapshot 1`] = `
<g
  className="node takeable"
  data-testid="csc108"
  id="csc108"
  onClick={[MockFunction]}
  onMouseEnter={[MockFunction]}
  onMouseLeave={[MockFunction]}
  shapeRendering="geometricPrecision"
  textRendering="geometricPrecision"
>
  <filter
    height="130%"
    id="dropshadow"
  >
    <feGaussianBlur
      in="SourceAlpha"
      stdDeviation="3"
    />
    <feOffset
      dx="2"
      dy="2"
      result="offsetblur"
    />
    <feComponentTransfer>
      <feFuncA
        slope="0.8"
        type="linear"
      />
    </feComponentTransfer>
    <feMerge>
      <feMergeNode />
      <feMergeNode
        in="SourceGraphic"
      />
    </feMerge>
  </filter>
  <rect
    filter="url(#dropshadow)"
    height={30}
    rx="8"
    ry="8"
    style={
      Object {
        "fill": "#5dd5b8",
      }
    }
    x={594.294128}
    y={38.09390799999999}
  />
  <text
    key="0"
    x={NaN}
    y={59.379107999999995}
  >
    CSC108
  </text>
</g>
`;

exports[`Hybrid Node should match snapshot 1`] = `
<g
  className="hybrid inactive"
  data-testid="h(csc301,csc318,csc384,csc418)"
  id="h46"
  onKeyDown={[MockFunction]}
  shapeRendering="geometricPrecision"
  textRendering="geometricPrecision"
>
  <filter
    height="130%"
    id="dropshadow"
  >
    <feGaussianBlur
      in="SourceAlpha"
      stdDeviation="3"
    />
    <feOffset
      dx="2"
      dy="2"
      result="offsetblur"
    />
    <feComponentTransfer>
      <feFuncA
        slope="0.8"
        type="linear"
      />
    </feComponentTransfer>
    <feMerge>
      <feMergeNode />
      <feMergeNode
        in="SourceGraphic"
      />
    </feMerge>
  </filter>
  <rect
    filter=""
    height={24}
    style={
      Object {
        "fill": "#888888",
      }
    }
    width={65.207497}
    x={18.168848}
    y={471.586698}
  />
  <text
    key="0"
    x={50.772596500000006}
    y={481.389408}
  >
    CSC318/418/
  </text>
  <text
    key="1"
    x={50.772596500000006}
    y={493.640408}
  >
    301/384
  </text>
</g>
`;
